gapi refactoring, updates, playlist update.

--- a/client/index.html
+++ b/client/index.html
@@ -65,6 +65,6 @@
   </div>
   <script async defer type="text/javascript" src="gapi.js"></script>
   <script async defer src="https://apis.google.com/js/api.js"
-  onload="this.onload=function(){};handleClientLoad()"></script>
+        onload="this.onload=function(){};gdrive.handleClientLoad()"></script>
 </body>
 </html>
