--- a/client/index.html
+++ b/client/index.html
@@ -63,7 +63,7 @@
       </details>
     </div>
   </div>
-  <script async defer type="text/javascript" src="gapi.js"></script>
+  <script type="text/javascript" src="gapi.js"></script>
   <script async defer src="https://apis.google.com/js/api.js"
         onload="this.onload=function(){};gdrive.handleClientLoad()"></script>
 </body>
